@@ -14,6 +14,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 - Replace "Time trigger" with "Time start"
+- Move percentage to bottom of the emoji rain
 
 ### Added
 - If you share your location and when the poll closes, you'll receive a summary of your movements.
